@@ -2,6 +2,7 @@
 	- Fix anyfs building with kernel version >=2.6.19
 	- Some other building fix
 	- Fix new (from v0.84.10) i/o buffer bug in anysurrect.
+	- Yet optimize anysurrect.
 
 * 16.12.06      Nikolaj (unDEFER) Krivchenkov <undefer@gmail.com>
 	- Fix anyfs building with kernel version >=2.6.18
